--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out repository code
+      uses: actions/checkout@v2
+    - name: Install packages
+      run: |
+        sudo apt-get update && sudo apt-get install -y\
+          build-essential libbpf-dev libbsd-dev libelf-dev libjson-c-dev\
+           libnl-3-dev libnl-cli-3-dev libnuma-dev libpcap-dev meson\
+           pkg-config
     - name: make
       run: make
